# citrees

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  .typos.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  IMPROVEMENTS.md  JOSS.md  LICENSE  README.md  STORY.md  SUPPORT.md  TODO.md  TODO.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: joss-draft-pdf.yml  paper-r-baseline.yml  tests.yml
benchmarks/: __init__.py  analysis.py  baselines.py  datasets.py  metrics.py  runner.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
citrees/: .travis.yml  __init__.py  _base.py  _conformal.py  _forest.py  _importance.py  _registry.py  _selector.py  _sequential.py  _splitter.py  _threshold_method.py  _tree.py  _types.py  _utils.py  citrees.py  feature_selectors.py  makefile  permutation.py  scorers.py  selectors.py  tree.py  utils.py
citrees/data/: analysis.py  experiment.py  metrics_et.csv  metrics_rf.csv  pendigits.data  svm_fi_results.json
citrees/experiments/: make_figures.py  timing_results.csv
citrees/src/: dcor.c
citrees/tests/: test_citrees.py  test_scorers.py  test_utils.py
docs/: algorithm.md  api.md  conformal-prediction.md  honest-estimation.md  improvements.md  index.md  parameters.md  permutation-tests.md  selectors.md  shap.md  splitters.md
docs/javascripts/: mathjax.js
examples/: basic_usage.py
paper/: CLAIMS_INDEX.md  INFRASTRUCTURE.md  NEXT_STEPS.md  README.md  TODO.md  WRITING_CHECKLIST.md  claim_audit.md  infrastructure.md  methods.md  paper.md  references.bib  requirements.txt  theory.md
paper/analysis/: __init__.py  aggregate_pipeline_artifacts.py  analyze_synthetic_ground_truth.py  artifact_outputs.py  benchmark_common.py  build_arxiv_source_bundle.py  build_benchmark_heterogeneity_tables.py  build_benchmark_package_tables.py  build_cif_mechanism_ablation_tables.py  build_cit_runtime_ablation_summary_tables.py  build_dataset_characteristics_table.py  build_fixed_panel_omnibus_table.py  build_fixed_panel_pairwise_ci_table.py  build_high_p_saturation_tables.py  build_knob_ablation_summary_tables.py  build_lodo_config_sensitivity_tables.py  build_manuscript_summary_tables.py  build_mechanism_summary_tables.py  build_paper_data_surfaces.py  build_synthetic_topk_tables.py  build_threshold_ablation_summary_tables.py  build_top_ranking_tables.py  config_resolution.py  fig_benchmark_k_trajectory.py  fig_benchmark_pairwise_sensitivity.py  fig_high_p_boundary_summary.py  fig_mechanism_forest_dimension_curves.py  fig_mechanism_forest_feature_counts.py  fig_synthetic_topk_focus_curves.py  run_mechanism_dimension_sweep_shard.py  statistical_helpers.py
paper/arxiv/: README.md  macros.tex  main.tex  references.bib  supplement.tex
paper/data/: clf_Yale.snappy.parquet  clf_glass.snappy.parquet  clf_madelon.snappy.parquet  clf_synthetic_bias_noise10_levels100.parquet  clf_synthetic_bias_noise10_levels50.parquet  clf_synthetic_bias_noise10_levels500.parquet  clf_synthetic_bias_noise20_levels100.parquet  clf_synthetic_bias_noise20_levels50.parquet  clf_synthetic_bias_noise20_levels500.parquet  clf_synthetic_bias_noise50_levels100.parquet  clf_synthetic_bias_noise50_levels50.parquet  clf_synthetic_bias_noise50_levels500.parquet  clf_synthetic_corr_blocks10_r0.7.parquet  clf_synthetic_corr_blocks10_r0.9.parquet  clf_synthetic_corr_blocks10_r0.95.parquet  clf_synthetic_corr_blocks5_r0.7.parquet  clf_synthetic_corr_blocks5_r0.9.parquet  clf_synthetic_corr_blocks5_r0.95.parquet  clf_synthetic_corr_noise_p100_k10_n1000_noise10_r0.9.parquet  clf_synthetic_nonlinear_p100_n1000.parquet  clf_synthetic_nonlinear_p100_n500.parquet  clf_synthetic_nonlinear_p500_n500.parquet  clf_synthetic_nonlinear_p50_n1000.parquet  clf_synthetic_nonlinear_p50_n500.parquet  clf_synthetic_p1000_k10_n200_sep0.5.parquet  clf_synthetic_p1000_k10_n200_sep1.0.parquet  clf_synthetic_p1000_k10_n200_sep2.0.parquet  clf_synthetic_p1000_k20_n200_sep0.5.parquet  clf_synthetic_p1000_k20_n200_sep1.0.parquet  clf_synthetic_p1000_k20_n200_sep2.0.parquet  clf_synthetic_p1000_k5_n200_sep0.5.parquet  clf_synthetic_p1000_k5_n200_sep1.0.parquet  clf_synthetic_p1000_k5_n200_sep2.0.parquet  clf_synthetic_p100_k10_n1000_sep0.5.parquet  clf_synthetic_p100_k10_n1000_sep1.0.parquet  clf_synthetic_p100_k10_n1000_sep2.0.parquet  clf_synthetic_p100_k10_n200_sep0.5.parquet  clf_synthetic_p100_k10_n200_sep1.0.parquet  clf_synthetic_p100_k10_n200_sep2.0.parquet  clf_synthetic_p100_k10_n500_sep0.5.parquet  (+90 more)
paper/data_generation/: generate_synthetic_datasets.py
paper/docs/: README.md  TODO.md  ablation-experiments.md  analysis-contract.md  analysis-lockdown-plan.md  analysis-roadmap.md  cif-runtime-ratio-analysis.md  cit-runtime-ablation-analysis.md  claim_audit.md  claims-index.md  drafts.md  empirical-findings.md  experiments.md  figures-plan.md  figures_plan.md  final-review-checklist.md  infrastructure.md  motivation.md  next-steps.md  paper-verification-checklist.md  paper-verification-log.md  paper.md  references.bib  relevant-research.md  results-finalization.md  reviewer-watchouts.md  script-cleanup-backlog.md  session-status-2026-03-24.md  skipped-experiments.md  theory.md  writing-checklist.md
paper/joss/: README.md  paper.bib  paper.md  paper.md.txt
paper/maintenance/: README.md  audit_grid_artifacts.py  audit_hash_alias_manifest.py  run_dt_rt_ranked_feature_check.py
paper/notes/: README.md  figures_plan.md  notes.md
paper/results/: README.md  synthetic_analysis.parquet  synthetic_analysis_clf.parquet  synthetic_analysis_reg.parquet  synthetic_topk_composition.parquet
paper/scripts/: README.md  analysis.py  check_progress.py  classifiers.py  clf_cv_analysis.py  clf_cv_server.py  clf_cv_worker.py  clf_cv_worker_v2.py  clf_experiment.py  clf_feature_selection_cv.py  clf_feature_selection_server.py  (+33 more)
tests/: conftest.py  test_base.py  test_forest.py  test_selector.py  test_threshold_method.py  test_tree.py
(+1616 files in other folders)
