[project]
name = "citrees"
version = "0.1.0"
description = "Conditional inference trees and forests"
authors = [{ name = "Robert Milletich", email = "rmill040@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "dcor>=0.7",
    "pydantic>=2.0",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
    "loguru>=0.7.3",
    "boto3>=1.42.25",
    "requests>=2.32.5",
    "boruta>=0.4.3",
    "lightgbm>=4.6.0",
    "xgboost>=3.1.3",
    "statsmodels>=0.14.6",
    "rpy2>=3.6.4",
    "mrmr-selection>=0.2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
paper = [
    "catboost>=1.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "matplotlib>=3.8",
    "openml>=0.14",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "seaborn>=0.13",
    "shap>=0.49.1",
    "typer>=0.12.0",
    "uvicorn>=0.34.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.scripts]
citrees-exp = "paper.scripts.cli.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "paper: tests for paper pipeline (deselect with '-m \"not paper\"')",
]

[tool.coverage.run]
source = ["citrees"]
omit = ["tests/*"]

[tool.typos.default.extend-words]
# Abbreviation for adjust_alpha_selector
aas = "aas"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
paper = [
    "boruta>=0.4.3",
    "catboost>=1.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.8",
    "mrmr-selection>=0.2.8",
    "openml>=0.14",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "seaborn>=0.13",
    "shap>=0.49.1",
    "typer>=0.12.0",
    "uvicorn>=0.34.0",
    "xgboost>=3.1.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]
