[project]
name = "citrees"
version = "0.1.0"
description = "Conditional inference trees and forests"
authors = [
    { name = "Robert Milletich", email = "rmill040@gmail.com" },
    { name = "Justin Downes" },
    { name = "Steve Goley" },
    { name = "Newel Hirst" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "conditional inference trees",
    "random forests",
    "feature selection",
    "permutation tests",
    "machine learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "dcor>=0.7",
    "pydantic>=2.0",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/rmill040/citrees"
Documentation = "https://github.com/rmill040/citrees/tree/master/docs"
Repository = "https://github.com/rmill040/citrees"
Issues = "https://github.com/rmill040/citrees/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pandas>=2.3.3",
    "pre-commit>=3.0",
    "pyarrow>=22.0.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
paper = [
    "boruta>=0.4.3",
    "boto3>=1.42.25",
    "catboost>=1.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.8",
    "mrmr-selection>=0.2.8",
    "openml>=0.14",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rich>=13.0.0",
    "rpy2>=3.6.4",
    "seaborn>=0.13",
    "statsmodels>=0.14.6",
    "typer>=0.12.0",
    "uvicorn>=0.34.0",
    "xgboost>=3.1.3",
]
paper-test = [
    "boto3>=1.42.25",
    "fastapi>=0.115.0",
    "loguru>=0.7.3",
    "statsmodels>=0.14.6",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.scripts]
citrees-exp = "paper.benchmark.cli.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "citrees",
    "paper/benchmark/adapters",
    "paper/benchmark/api",
    "paper/benchmark/cli",
    "paper/benchmark/config",
    "paper/benchmark/experiments",
    "paper/benchmark/infra",
    "paper/benchmark/pipeline",
    "paper/benchmark/utils",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/paper/arxiv/*.pdf",
    "/paper/data",
    "/paper/results",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "paper: tests for paper pipeline (deselect with '-m \"not paper\"')",
    "tree: tests for tree estimators and tree internals",
    "other: miscellaneous utility tests",
]

[tool.coverage.run]
source = ["citrees"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.10",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
paper = [
    "boruta>=0.4.3",
    "boto3>=1.42.25",
    "catboost>=1.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.8",
    "mrmr-selection>=0.2.8",
    "openml>=0.14",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rich>=13.0.0",
    "rpy2>=3.6.4",
    "seaborn>=0.13",
    "statsmodels>=0.14.6",
    "typer>=0.12.0",
    "uvicorn>=0.34.0",
    "xgboost>=3.1.3",
]
paper-test = [
    "boto3>=1.42.25",
    "fastapi>=0.115.0",
    "loguru>=0.7.3",
    "statsmodels>=0.14.6",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]
